# esp-now-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  local-idf.sh
main/: CMakeLists.txt  esp_now_test.c
sdk/: .gitignore
